# sg

./: .gitignore  BUILD.gn
src/: core.h  main.cc  resource.h  sg.rc
