# Copyright 2016 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

source_set("sglib") {
  deps = [
    ":re2",
  ]

  sources = [
    #"src/dbgeng/debugger_dbgeng.cc",
    #"src/docking_resizer.cc",
    #"src/docking_split_container.cc",
    #"src/docking_tool_window.cc",
    #"src/docking_workspace.cc",
    #"src/focus.cc",
    #"src/gfx_win.cc",
    #"src/scroll_helper.cc",
    #"src/skin.cc",
    #"src/source_view/cpp_lexer.cc",
    #"src/source_view/lexer.cc",
    #"src/source_view/lexer_state.cc",
    #"src/source_view/source_view.cc",
    #"src/text_edit.cc",
    #"src/tool_window_dragger.cc",
    #"src/tree_grid.cc",
    #"src/widget.cc",
  ]

  include_dirs = [ "//third_party/re2" ]
}

source_set("re2") {
  sources = [
    "third_party/re2/re2/bitstate.cc",
    "third_party/re2/re2/compile.cc",
    "third_party/re2/re2/dfa.cc",
    "third_party/re2/re2/filtered_re2.cc",
    "third_party/re2/re2/mimics_pcre.cc",
    "third_party/re2/re2/nfa.cc",
    "third_party/re2/re2/onepass.cc",
    "third_party/re2/re2/parse.cc",
    "third_party/re2/re2/perl_groups.cc",
    "third_party/re2/re2/prefilter.cc",
    "third_party/re2/re2/prefilter_tree.cc",
    "third_party/re2/re2/prog.cc",
    "third_party/re2/re2/re2.cc",
    "third_party/re2/re2/regexp.cc",
    "third_party/re2/re2/set.cc",
    "third_party/re2/re2/simplify.cc",
    "third_party/re2/re2/stringpiece.cc",
    "third_party/re2/re2/tostring.cc",
    "third_party/re2/re2/unicode_casefold.cc",
    "third_party/re2/re2/unicode_groups.cc",
    "third_party/re2/util/hash.cc",
    "third_party/re2/util/logging.cc",
    "third_party/re2/util/pcre.cc",
    "third_party/re2/util/random.cc",
    "third_party/re2/util/rune.cc",
    "third_party/re2/util/stringprintf.cc",
    "third_party/re2/util/strutil.cc",
    "third_party/re2/util/valgrind.cc",
  ]

  if (true) {
    cflags = [
      "/wd4100",
      "/wd4127",
      "/wd4244",
      "/wd4456",
      "/wd4457",
    ]

    sources += [ "third_party/re2/util/threadwin.cc" ]
  } else {
    sources += [ "third_party/re2/util/thread.cc" ]
  }

  include_dirs = [ "//third_party/re2" ]
}

executable("sg") {
  deps = [
    ":sglib",
  ]

  sources = [
    "src/main.cc",
    "src/sg.rc",
  ]

  libs = [
    "gdi32.lib",
    "user32.lib",
  ]
}

executable("sg_test") {
  deps = [
    ":sglib",
  ]
  sources = [
    "src/docking_test.cc",
    "src/source_view/lexer_test.cc",
    "src/test_stubs.cc",
    "src/tree_grid_test.cc",
    "third_party/gtest-1.7.0/src/gtest-all.cc",
    "third_party/gtest-1.7.0/src/gtest_main.cc",
  ]

  include_dirs = [
    "//third_party/re2",
    "third_party/gtest-1.7.0/include",
    "third_party/gtest-1.7.0",
  ]

  defines = [ "GTEST_HAS_SEH=0" ]

  libs = [
    "gdi32.lib",
    "user32.lib",
  ]
}
